# WS-ETL_COM_PYTHON_E_DUCKDB

./: Dockerfile  README.md  app.py  pyproject.toml
