[tool.poetry]
name = "workshop - criando etl com python e duckdb"
version = "0.1.0"
description = ""
authors = ["Jonathan Moraes <jonamoraes20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
